--- a/about-me.html
+++ b/about-me.html
@@ -5,18 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
-    <title>About Yevheniia Kovzikova</title>
+    <link rel="stylesheet" href="/style.css" />
+    <title>About me - Yevheniia Kovzikova</title>
+    <meta
+      name="description"
+      content="About Yevheniia Kovzikova, a front-end developer based in Europe"
+    />
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Yevheniia Kovzikova</a>
+        <a
+          class="navbar-brand"
+          href="/"
+          title="This is a website about Yevheniia Kovzikova - Front-end developer"
+          >Yevheniia Kovzikova</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -30,9 +39,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            <a class="nav-link active" href="about.html">About me</a>
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a class="nav-link" aria-current="page" href="/" title="Homepage"
+              >Home</a
+            >
+            <a
+              class="nav-link active"
+              href="/about-me.html"
+              title="About Yevheniia Kovzikova"
+              >About me</a
+            >
+            <a
+              class="nav-link"
+              href="/about-me.html#contact"
+              title="Contact Yevheniia Kovzikova"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
@@ -49,25 +70,25 @@
     </div>
     <div class="container mb-5">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-md-4">
           <img
-            src="images/yoga.png"
-            alt=""
-            class="img-fluid p-2 rounded shadow"
+            src="/images/yoga.png"
+            alt="Yoga project"
+            class="img-fluid p-2 mb-4 rounded shadow"
           />
         </div>
-        <div class="col-sm-4">
+        <div class="col-md-4">
           <img
-            src="images/weather.png"
-            alt=""
-            class="img-fluid p-2 rounded shadow"
+            src="/images/weather.png"
+            alt="Weather project"
+            class="img-fluid p-2 mb-4 rounded shadow"
           />
         </div>
-        <div class="col-sm-4">
+        <div class="col-md-4">
           <img
-            src="images/yogurt.png"
-            alt=""
-            class="img-fluid p-2 rounded shadow"
+            src="/images/yogurt.png"
+            alt="Yogurt project"
+            class="img-fluid p-2 mb-4 rounded shadow"
           />
         </div>
       </div>
@@ -79,8 +100,8 @@
       </a>
     </div>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
   </body>
