--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yevheniia Kovzikova</title>
+    <title>My personal page: Yevheniia Kovzikova - Front-end developer</title>
+    <meta
+      name="description"
+      content="Hi! I'm a front-end developer with a strong interest in web technologies."
+    />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/style.css" />
@@ -16,7 +20,12 @@
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Yevheniia Kovzikova</a>
+        <a
+          class="navbar-brand"
+          href="/"
+          title="This is a website about Yevheniia Kovzikova - Front-end developer"
+          >Yevheniia Kovzikova</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -30,11 +39,25 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html"
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/"
+              title="Homepage"
               >Home</a
             >
-            <a class="nav-link" href="about.html">About me</a>
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a
+              class="nav-link"
+              href="/about-me.html"
+              title="About Yevheniia Kovzikova"
+              >About me</a
+            >
+            <a
+              class="nav-link"
+              href="/about-me.html#contact"
+              title="Contact Yevheniia Kovzikova"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
@@ -42,17 +65,31 @@
     <h2>👋 Hi I am</h2>
     <h1>Yevheniia Kovzikova</h1>
     <h3>🇺🇦 Front-end developer, based in Europe</h3>
-    <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+    <div class="navigation-links mb-5">
+      <a
+        href="/about-me.html#contact"
+        class="contact-link"
+        title="Contact Yevheniia Kovzikova"
+        >Contact me</a
+      >
+      <a
+        href="/about-me.html"
+        class="about-link"
+        title="About Yevheniia Kovzikova"
+        >About me</a
+      >
     </div>
     <div class="container">
-      <div class="row pt-5">
-        <div class="col-md-6">
-          <img src="/images/yoga.png" alt="" class="img-fluid rounded" />
+      <div class="row">
+        <div class="col-sm-6">
+          <img
+            src="/images/yoga.png"
+            alt="Yoga project"
+            class="img-fluid rounded d-none d-sm-block"
+          />
         </div>
-        <div class="col-md-6">
-          <h2 class="text-start mb-3">Yoga app</h2>
+        <div class="col-sm-6">
+          <h2 class="headline-app mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -60,33 +97,15 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="index.html" class="app-link">Launch Yoga App</a>
+            <a href="#" class="app-link" title="Yoga project"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
-      <div class="row pt-5">
-        <div class="col-md-6">
-          <h2 class="text-start mb-3">Weather app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5 mb-5">
-            <a href="index.html" class="app-link">Launch Weather App</a>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <img src="/images/weather.png" alt="" class="img-fluid rounded" />
-        </div>
-      </div>
-      <div class="row pt-5">
-        <div class="col-md-6">
-          <img src="images/yogurt.png" alt="" class="img-fluid rounded" />
-        </div>
-        <div class="col-md-6">
-          <h2 class="text-start mb-3">Yogurt app</h2>
+      <div class="row mt-5">
+        <div class="col-sm-6">
+          <h2 class="headline-app mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -94,14 +113,46 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="index.html" class="app-link">Launch Yogurt App</a>
+            <a href="#" class="app-link" title="Weather project"
+              >Launch Weather App</a
+            >
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <img
+            src="/images/weather.png"
+            alt="Weather project"
+            class="img-fluid rounded d-none d-sm-block"
+          />
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-sm-6">
+          <img
+            src="/images/yogurt.png"
+            alt="Yogurt project"
+            class="img-fluid rounded d-none d-sm-block"
+          />
+        </div>
+        <div class="col-sm-6">
+          <h2 class="headline-app mb-3">Yogurt app</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+            eos eveniet alias temporibus deserunt veritatis minima fugiat
+            explicabo eum dolore.
+          </p>
+          <div class="mt-5">
+            <a href="#" class="app-link" title="Yogurt project"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
     </div>
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
   </body>
