--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         </div>
       </div>
     </nav>
-    <h2>👋 Hi I am</h2>
+    <h2>👋 Hi, I am</h2>
     <h1>Yevheniia Kovzikova</h1>
-    <h3>🇺🇦 Front-end developer, based in Europe</h3>
+    <h3 class="ps-3 pe-3">🇺🇦 Front-end developer, based in Europe</h3>
     <div class="navigation-links mb-5">
       <a
         href="/about-me.html#contact"
@@ -81,14 +81,14 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-12 col-md-6">
           <img
             src="/images/yoga.png"
             alt="Yoga project"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-12 col-md-6">
           <h2 class="headline-app mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-sm-6">
+        <div class="col-sm-12 col-md-6">
           <h2 class="headline-app mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -112,13 +112,13 @@
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-          <div class="mt-5">
+          <div class="mt-5 mb-4">
             <a href="#" class="app-link" title="Weather project"
               >Launch Weather App</a
             >
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-12 col-md-6">
           <img
             src="/images/weather.png"
             alt="Weather project"
@@ -127,14 +127,14 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-sm-6">
+        <div class="col-sm-12 col-md-6">
           <img
             src="/images/yogurt.png"
             alt="Yogurt project"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-12 col-md-6">
           <h2 class="headline-app mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
