--- a/about-me.html
+++ b/about-me.html
@@ -59,7 +59,7 @@
       </div>
     </nav>
     <h1>About me</h1>
-    <h3>Front-end developer from Kiyv, Ukraine</h3>
+    <h3 class="ps-3 pe-3">Front-end developer from Kiyv, Ukraine</h3>
     <div class="about-paragraphs">
       <p class="text-center">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
