Added font and some text
Added "Arial" to font-family

--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       </nav>
     </header>
     <main>
-      <section class="hero-section"></section>
+      <section class="hero-section">
+        <p>PORTFOLIO</p>
+        <p>Checkout a few of my works</p>
+      </section>
     </main>
   </body>
 </html>
