--- a/index.html
+++ b/index.html
@@ -18,27 +18,65 @@
     <link rel="stylesheet" href="/media.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="container">
-        <h1 class="text-uppercase">yevheniia kovzikova</h1>
-        <p class="header__text-about text-uppercase">
-          slovakia-based front-end developer
-        </p>
+    <header class="mb-5 header">
+      <div class="wrapper">
+        <section class="hero-section">
+          <h1 class="mb-4 text-uppercase">yevheniia kovzikova</h1>
+          <p class="header__text-about text-uppercase">
+            slovakia-based front-end developer
+          </p>
+        </section>
+        <div class="header-container">
+          <div class="header__nav">
+            <nav>
+              <ul class="header__menu">
+                <li><a href="#" class="link upper">Home</a></li>
+                <li><a href="#" class="link">Resume</a></li>
+                <li><a href="#" class="link">Services</a></li>
+                <li><a href="#" class="link">Portfolio</a></li>
+                <li><a href="#" class="link">Contact</a></li>
+              </ul>
+            </nav>
+            <button class="header__burger" type="button">
+              <svg width="32" height="32">
+                <use href="./images/icons.svg#icon-burger-menu"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
-      <nav class="header__nav">
-        <ul class="header__menu">
-          <li><a href="#" class="link upper">Home</a></li>
-          <li><a href="#" class="link">Resume</a></li>
-          <li><a href="#" class="link">Services</a></li>
-          <li><a href="#" class="link">Portfolio</a></li>
-          <li><a href="#" class="link">Contact</a></li>
-        </ul>
-      </nav>
     </header>
     <main>
-      <section class="hero-section">
-        <p>PORTFOLIO</p>
+      <section class="about-section">
+        <div class="container">
+          <div class="d-flex row">
+            <div class="col d-none d-md-block">
+              <img
+                src="./images/girl-programmer.jpg"
+                alt="Photo of girl programmer in glasses with computer"
+                class="img-fluid w-75"
+              />
+            </div>
+            <div class="col ps-5">
+              <h2 class="mb-5">Hi! I'm Yevheniia Kovzikova</h2>
+              <p class="about-section__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                repudiandae consequuntur incidunt quae, optio autem iste
+                repellendus voluptate, distinctio saepe maxime qui totam
+                officiis adipisci quas eaque nobis ratione cum.
+              </p>
+              <p><a href="#">Checkout my resume</a></p>
+              <h3 class="mt-5 mb-4">Contact me here!</h3>
+              <p>E-mail: <a href="#">yevheniia_123@gmail.com</a></p>
+              <p>Phone: <a href="#">(012)345-67-89</a></p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="portfolio">
+        <h3>PORTFOLIO</h3>
         <p>Checkout a few of my works</p>
+        <p>(more coming soon)</p>
       </section>
     </main>
   </body>
