--- a/index.html
+++ b/index.html
@@ -47,32 +47,34 @@
       </div>
     </header>
     <main>
-      <section class="about-section">
-        <div class="container">
-          <div class="d-flex row">
-            <div class="col d-none d-md-block">
-              <img
-                src="./images/girl-programmer.jpg"
-                alt="Photo of girl programmer in glasses with computer"
-                class="img-fluid w-75"
-              />
-            </div>
-            <div class="col ps-5">
-              <h2 class="mb-5">Hi! I'm Yevheniia Kovzikova</h2>
-              <p class="about-section__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
-                repudiandae consequuntur incidunt quae, optio autem iste
-                repellendus voluptate, distinctio saepe maxime qui totam
-                officiis adipisci quas eaque nobis ratione cum.
-              </p>
-              <p><a href="#">Checkout my resume</a></p>
-              <h3 class="mt-5 mb-4">Contact me here!</h3>
-              <p>E-mail: <a href="#">yevheniia_123@gmail.com</a></p>
-              <p>Phone: <a href="#">(012)345-67-89</a></p>
+      <div class="wrapper">
+        <section class="about-section">
+          <div class="container">
+            <div class="d-flex row">
+              <div class="col d-none d-md-block">
+                <img
+                  src="./images/girl-programmer.jpg"
+                  alt="Photo of girl programmer in glasses with computer"
+                  class="img-fluid w-75"
+                />
+              </div>
+              <div class="col ps-5">
+                <h2 class="mb-5">Hi! I'm Yevheniia Kovzikova</h2>
+                <p class="about-section__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                  repudiandae consequuntur incidunt quae, optio autem iste
+                  repellendus voluptate, distinctio saepe maxime qui totam
+                  officiis adipisci quas eaque nobis ratione cum.
+                </p>
+                <p><a href="#">Checkout my resume</a></p>
+                <h3 class="mt-5 mb-4">Contact me here!</h3>
+                <p>E-mail: <a href="#">yevheniia_123@gmail.com</a></p>
+                <p>Phone: <a href="#">(012)345-67-89</a></p>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
       <section class="portfolio">
         <h3>PORTFOLIO</h3>
         <p>Checkout a few of my works</p>
