--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="mb-5 header">
-      <div class="wrapper">
+      <div class="section">
         <section class="hero-section">
           <h1 class="mb-4 text-uppercase">yevheniia kovzikova</h1>
           <p class="header__text-about text-uppercase">
@@ -33,7 +33,9 @@
                 <li><a href="#" class="link upper">Home</a></li>
                 <li><a href="#" class="link">Resume</a></li>
                 <li><a href="#" class="link">Services</a></li>
-                <li><a href="#" class="link">Portfolio</a></li>
+                <li>
+                  <a href="./index.html#portfolio" class="link">Portfolio</a>
+                </li>
                 <li><a href="#" class="link">Contact</a></li>
               </ul>
             </nav>
@@ -47,38 +49,50 @@
       </div>
     </header>
     <main>
-      <div class="wrapper">
-        <section class="about-section">
-          <div class="container">
-            <div class="d-flex row">
-              <div class="col d-none d-md-block">
-                <img
-                  src="./images/girl-programmer.jpg"
-                  alt="Photo of girl programmer in glasses with computer"
-                  class="img-fluid w-75"
-                />
-              </div>
-              <div class="col ps-5">
-                <h2 class="mb-5">Hi! I'm Yevheniia Kovzikova</h2>
-                <p class="about-section__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
-                  repudiandae consequuntur incidunt quae, optio autem iste
-                  repellendus voluptate, distinctio saepe maxime qui totam
-                  officiis adipisci quas eaque nobis ratione cum.
-                </p>
-                <p><a href="#">Checkout my resume</a></p>
-                <h3 class="mt-5 mb-4">Contact me here!</h3>
-                <p>E-mail: <a href="#">yevheniia_123@gmail.com</a></p>
-                <p>Phone: <a href="#">(012)345-67-89</a></p>
-              </div>
+      <section class="about-section section">
+        <div class="container">
+          <div class="row">
+            <div class="col-12 col-md-6 pt-4 pt-lg-0 pe-md-5 pb-5 pb-md-0">
+              <img
+                src="./images/girl-programmer.jpg"
+                alt="Photo of girl programmer in glasses with computer"
+                class="img float-end"
+              />
+            </div>
+            <div
+              class="col-12 col-md-6 pt-lg-3 pt-xl-4 text-center text-md-start"
+            >
+              <h2 class="mb-5">Hi! I'm Yevheniia Kovzikova</h2>
+              <p class="about-section__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
+                repudiandae consequuntur incidunt quae, optio autem iste
+                repellendus voluptate, distinctio saepe maxime qui totam
+                officiis adipisci quas eaque nobis ratione cum.
+              </p>
+              <p><a href="#">Checkout my resume</a></p>
+              <h4 class="mt-5 mb-4">Contact me here!</h4>
+              <br />
+              <br />
+              <br />
+              <p>E-mail: <a href="#">yevheniia_123@gmail.com</a></p>
+              <p>Phone: <a href="#">(012)345-67-89</a></p>
             </div>
           </div>
-        </section>
-      </div>
-      <section class="portfolio">
-        <h3>PORTFOLIO</h3>
-        <p>Checkout a few of my works</p>
-        <p>(more coming soon)</p>
+        </div>
+      </section>
+      <section class="service-section section" id="service">
+        <h3 class="fs-4 text-uppercase">what i do</h3>
+        <p class="text-center fs-2 fw-semibold">My services</p>
+      </section>
+      <section class="portfolio-section section" id="portfolio">
+        <h3 class="fs-4 text-uppercase">portfolio</h3>
+        <p class="text-center fs-2 fw-semibold">Checkout a few of my works</p>
+        <p class="text-center">(more coming soon)</p>
+        <article class="projects">
+          <section class="tic-tac-toe">
+            <a href="./tic-tac-toe.html">Play Tic Tac Toe</a>
+          </section>
+        </article>
       </section>
     </main>
   </body>
