--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/media.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/media.css" />
   </head>
   <body>
     <header class="mb-5 header">
@@ -54,7 +54,7 @@
           <div class="row">
             <div class="col-12 col-md-6 pt-4 pt-lg-0 pe-md-5 pb-5 pb-md-0">
               <img
-                src="./images/girl-programmer.jpg"
+                src="./images/girl-programmer.png"
                 alt="Photo of girl programmer in glasses with computer"
                 class="img float-end"
               />
@@ -71,9 +71,17 @@
               </p>
               <p><a href="#">Checkout my resume</a></p>
               <h4 class="mt-5 mb-4">Contact me here!</h4>
-              <br />
-              <br />
-              <br />
+              <div class="social-links d-flex justify-content-start mb-4">
+                <a href="#" target="_blank" class="p-3" title="Instagram"
+                  ><i class="fa-brands fa-instagram" aria-hidden="true"></i
+                ></a>
+                <a href="#" target="_blank" class="p-3" title="GitHub"
+                  ><i class="fa-brands fa-github" aria-hidden="true"></i
+                ></a>
+                <a href="#" target="_blank" class="p-3" title="LinkedIn"
+                  ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+                ></a>
+              </div>
               <p>E-mail: <a href="#">yevheniia_123@gmail.com</a></p>
               <p>Phone: <a href="#">(012)345-67-89</a></p>
             </div>
@@ -89,11 +97,77 @@
         <p class="text-center fs-2 fw-semibold">Checkout a few of my works</p>
         <p class="text-center">(more coming soon)</p>
         <article class="projects">
-          <section class="tic-tac-toe">
+          <div class="tic-tac-toe">
             <a href="./tic-tac-toe.html">Play Tic Tac Toe</a>
-          </section>
+          </div>
+          <div class="tic-tac-toe">
+            <a href="https://citycast-app.netlify.app/" target="_blank"
+              >weather project</a
+            >
+          </div>
+          <div class="tic-tac-toe">
+            <a href="https://rv-site.netlify.app/" target=":_blank"
+              >RVs project</a
+            >
+          </div>
         </article>
       </section>
+      <section class="contact-section section">
+        <div class="contact-container">
+          <h2 class="mb-4">Contact Information</h2>
+          <form action="#" name="form">
+            <div class="form-field">
+              <label class="input__label" for="user-name">Name:</label>
+              <input
+                class="input__control input"
+                type="text"
+                name="user-name"
+                id="user-name"
+                required
+              />
+            </div>
+            <div class="form-field">
+              <label class="input__label" for="user-email">Email:</label>
+              <input
+                class="input__control input"
+                type="email"
+                name="user-email"
+                id="user-email"
+                required
+              />
+            </div>
+            <div class="form-field">
+              <label class="input__label" for="user-message">Message:</label>
+              <textarea
+                class="input"
+                name="user-message"
+                id="user-message"
+              ></textarea>
+            </div>
+            <button class="form-button">Send Message</button>
+          </form>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="social-links d-flex justify-content-center">
+        <a href="#" target="_blank" class="p-3" title="Instagram"
+          ><i class="fa-brands fa-instagram" aria-hidden="true"></i
+        ></a>
+        <a href="#" target="_blank" class="p-3" title="GitHub"
+          ><i class="fa-brands fa-github" aria-hidden="true"></i
+        ></a>
+        <a href="#" target="_blank" class="p-3" title="LinkedIn"
+          ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+        ></a>
+      </div>
+      <p>
+        Designed and coded by Yevheniia Kovzikova and open-sourced on GitHub
+      </p>
+    </footer>
+    <script
+      src="https://kit.fontawesome.com/ecfaa166b3.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
