--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/media.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/media.css" />
   </head>
   <body>
     <header class="mb-5 header">
@@ -54,7 +54,7 @@
           <div class="row">
             <div class="col-12 col-md-6 pt-4 pt-lg-0 pe-md-5 pb-5 pb-md-0">
               <img
-                src="./images/girl-programmer.png"
+                src="images/girl-programmer.png"
                 alt="Photo of girl programmer in glasses with computer"
                 class="img float-end"
               />
@@ -98,7 +98,7 @@
         <p class="text-center">(more coming soon)</p>
         <article class="projects">
           <div class="tic-tac-toe">
-            <a href="./tic-tac-toe.html">Play Tic Tac Toe</a>
+            <a href="./tic-tac-toe.html" target="_blank">play tic tac toe</a>
           </div>
           <div class="tic-tac-toe">
             <a href="https://citycast-app.netlify.app/" target="_blank"
