--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </nav>
             <button class="header__burger" type="button">
               <svg width="32" height="32">
-                <use href="./images/icons.svg#icon-burger-menu"></use>
+                <use href="/images/icons.svg#icon-burger-menu"></use>
               </svg>
             </button>
           </div>
