--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </nav>
             <button class="header__burger" type="button">
               <svg width="32" height="32">
-                <use href="/images/icons.svg#icon-burger-menu"></use>
+                <use href="./images/icons.svg#icon-burger-menu"></use>
               </svg>
             </button>
           </div>
@@ -54,7 +54,7 @@
           <div class="row">
             <div class="col-12 col-md-6 pt-4 pt-lg-0 pe-md-5 pb-5 pb-md-0">
               <img
-                src="images/girl-programmer.png"
+                src="images/girl-programmer.jpg"
                 alt="Photo of girl programmer in glasses with computer"
                 class="img float-end"
               />
