--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
                 >
               </div>
               <div class="col d-none d-md-block">
-                <img src="./images/rv.png" alt="" class="img-fluid" />
+                <img src="./images/rv.jpg" alt="" class="img-fluid" />
               </div>
             </div>
           </div>
           <div class="container mb-5">
             <div class="row">
               <div class="col d-none d-md-block">
-                <img src="./images/TTT-project.png" alt="" class="img-fluid" />
+                <img src="./images/TTT-project.jpg" alt="" class="img-fluid" />
               </div>
               <div
                 class="portfolio-section__project-description col text-center text-md-start pe-5"
@@ -215,7 +215,7 @@
               </div>
               <div class="col d-none d-md-block">
                 <img
-                  src="./images/weather_project.png"
+                  src="./images/weather_project.jpg"
                   alt=""
                   class="img-fluid"
                 />
