Changed index.html some classes
Changed classes: social-links and fa-brands
Added an img-fluid class to the about section image

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <img
                 src="./images/girl-programmer.jpg"
                 alt="Photo of girl programmer in glasses with computer"
-                class="img float-end"
+                class="img-fluid img float-end"
               />
             </div>
             <div
@@ -70,18 +70,18 @@
                 officiis adipisci quas eaque nobis ratione cum.
               </p>
               <p><a href="#">Checkout my resume</a></p>
-              <h4 class="mt-5 mb-4">Contact me here!</h4>
+              <h4 class="mt-5 mb-2">Contact me here!</h4>
               <div
-                class="social-links d-flex justify-content-center justify-content-md-start mb-4"
+                class="social-icons d-flex justify-content-center justify-content-md-start mb-4"
               >
                 <a href="#" target="_blank" class="p-3" title="Instagram"
-                  ><i class="fa-brands fa-instagram" aria-hidden="true"></i
+                  ><i class="fa fa-instagram" aria-hidden="true"></i
                 ></a>
                 <a href="#" target="_blank" class="p-3" title="GitHub"
-                  ><i class="fa-brands fa-github" aria-hidden="true"></i
+                  ><i class="fa fa-github" aria-hidden="true"></i
                 ></a>
                 <a href="#" target="_blank" class="p-3" title="LinkedIn"
-                  ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+                  ><i class="fa fa-linkedin" aria-hidden="true"></i
                 ></a>
               </div>
               <p>E-mail: <a href="#">yevheniia_123@gmail.com</a></p>
