--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <div class="row">
             <div class="col-12 col-md-6 pt-4 pt-lg-0 pe-md-5 pb-5 pb-md-0">
               <img
-                src="./images/girl-programmer.jpg"
+                src="./images/girl-programmer.png"
                 alt="Photo of girl programmer in glasses with computer"
                 class="img-fluid img float-end"
               />
