--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
           <div class="header__nav">
             <nav>
               <ul class="header__menu">
-                <li><a href="#" class="link upper">Home</a></li>
+                <li><a href="/" class="link upper">Home</a></li>
                 <li><a href="#" class="link">Resume</a></li>
-                <li><a href="#" class="link">Services</a></li>
+                <li><a href="/#service" class="link">Services</a></li>
                 <li>
                   <a href="./index.html#portfolio" class="link">Portfolio</a>
                 </li>
-                <li><a href="#" class="link">Contact</a></li>
+                <li><a href="/#contact" class="link">Contact</a></li>
               </ul>
             </nav>
             <button class="header__burger" type="button">
@@ -143,7 +143,7 @@
           <div class="container mb-5">
             <div class="row">
               <div class="col d-none d-md-block">
-                <img src="./images/TTT-project.jpg" alt="" class="img-fluid" />
+                <img src="./images/ttt-project.jpg" alt="" class="img-fluid" />
               </div>
               <div
                 class="portfolio-section__project-description col text-center text-md-start pe-5"
@@ -224,7 +224,7 @@
           </div>
         </article>
       </section>
-      <section class="contact-section section">
+      <section class="contact-section section" id="contact">
         <div class="contact-container">
           <h2 class="mb-4">Contact Information</h2>
           <form action="#" name="form">
