--- a/index.html
+++ b/index.html
@@ -39,11 +39,14 @@
                 <li><a href="/#contact" class="link">Contact</a></li>
               </ul>
             </nav>
-            <button class="header__burger" type="button">
+            <button class="header__burger menu-btn-open" type="button">
               <svg width="32" height="32">
                 <use href="./images/icons.svg#icon-burger-menu"></use>
               </svg>
             </button>
+            <div class="mobile-menu">
+              <button type="button" class="menu-btn-close">Close</button>
+            </div>
           </div>
         </div>
       </div>
@@ -285,5 +288,6 @@
       src="https://kit.fontawesome.com/ecfaa166b3.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
