Added navigation to mabile menu

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="header__nav">
             <nav>
               <ul class="header__menu">
-                <li><a href="/" class="link upper">Home</a></li>
+                <li><a href="/" class="link">Home</a></li>
                 <li><a href="#" class="link">Resume</a></li>
                 <li><a href="/#service" class="link">Services</a></li>
                 <li>
@@ -45,7 +45,32 @@
               </svg>
             </button>
             <div class="mobile-menu">
-              <button type="button" class="menu-btn-close">Close</button>
+              <button
+                type="button"
+                class="mobile-menu__btn-close menu-btn-close"
+              >
+                Close
+              </button>
+              <div class="mobile__menu">
+                <h2 class="mobile-title">Yevheniia<br />Kovzikova</h2>
+                <nav>
+                  <ul class="mobile-list">
+                    <li><a href="/" class="mobile__menu-link">Home</a></li>
+                    <li><a href="#" class="mobile__menu-link">Resume</a></li>
+                    <li>
+                      <a href="/#service" class="mobile__menu-link">Services</a>
+                    </li>
+                    <li>
+                      <a href="./index.html#portfolio" class="mobile__menu-link"
+                        >Portfolio</a
+                      >
+                    </li>
+                    <li>
+                      <a href="/#contact" class="mobile__menu-link">Contact</a>
+                    </li>
+                  </ul>
+                </nav>
+              </div>
             </div>
           </div>
         </div>
