--- a/index.html
+++ b/index.html
@@ -55,10 +55,14 @@
                 <h2 class="mobile-title">Yevheniia<br />Kovzikova</h2>
                 <nav>
                   <ul class="mobile-list">
-                    <li><a href="/" class="mobile__menu-link">Home</a></li>
+                    <li>
+                      <a href="./index.html" class="mobile__menu-link">Home</a>
+                    </li>
                     <li><a href="#" class="mobile__menu-link">Resume</a></li>
                     <li>
-                      <a href="/#service" class="mobile__menu-link">Services</a>
+                      <a href="./index.html#services" class="mobile__menu-link"
+                        >Services</a
+                      >
                     </li>
                     <li>
                       <a href="./index.html#portfolio" class="mobile__menu-link"
@@ -66,7 +70,9 @@
                       >
                     </li>
                     <li>
-                      <a href="/#contact" class="mobile__menu-link">Contact</a>
+                      <a href="./index.html#contact" class="mobile__menu-link"
+                        >Contact</a
+                      >
                     </li>
                   </ul>
                 </nav>
