--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
           <div class="header__nav">
             <nav>
               <ul class="header__menu">
-                <li><a href="/" class="link">Home</a></li>
-                <li><a href="#" class="link">Resume</a></li>
+                <li><a href="/" class="link carrent-link">Home</a></li>
+                <li>
+                  <a href="./resume.html" class="link">Resume</a>
+                </li>
                 <li><a href="/#service" class="link">Services</a></li>
                 <li>
                   <a href="./index.html#portfolio" class="link">Portfolio</a>
@@ -56,23 +58,19 @@
                 <nav>
                   <ul class="mobile-list">
                     <li>
-                      <a href="./index.html" class="mobile__menu-link">Home</a>
+                      <a href="./" class="mobile__menu-link">Home</a>
                     </li>
                     <li><a href="#" class="mobile__menu-link">Resume</a></li>
                     <li>
-                      <a href="./index.html#services" class="mobile__menu-link"
-                        >Services</a
-                      >
+                      <a href="#services" class="mobile__menu-link">Services</a>
                     </li>
                     <li>
-                      <a href="./index.html#portfolio" class="mobile__menu-link"
+                      <a href="#portfolio" class="mobile__menu-link"
                         >Portfolio</a
                       >
                     </li>
                     <li>
-                      <a href="./index.html#contact" class="mobile__menu-link"
-                        >Contact</a
-                      >
+                      <a href="#contact" class="mobile__menu-link">Contact</a>
                     </li>
                   </ul>
                 </nav>
@@ -88,7 +86,7 @@
           <div class="row">
             <div class="col-12 col-md-6 pt-4 pt-lg-0 pe-md-5 pb-5 pb-md-0">
               <img
-                src="./images/girl-programmer.png"
+                src="./images/girl-programmer.jpg"
                 alt="Photo of girl programmer in glasses with computer"
                 class="img-fluid img float-end"
               />
@@ -106,15 +104,15 @@
               <p><a href="#">Checkout my resume</a></p>
               <h4 class="mt-5 mb-2">Contact me here!</h4>
               <div
-                class="social-icons d-flex justify-content-center justify-content-md-start mb-4"
+                class="social-links d-flex justify-content-center justify-content-md-start mb-4"
               >
-                <a href="#" target="_blank" class="p-3" title="Instagram"
+                <a href="#" target="_blank" title="Instagram"
                   ><i class="fa fa-instagram" aria-hidden="true"></i
                 ></a>
-                <a href="#" target="_blank" class="p-3" title="GitHub"
+                <a href="#" target="_blank" title="GitHub"
                   ><i class="fa fa-github" aria-hidden="true"></i
                 ></a>
-                <a href="#" target="_blank" class="p-3" title="LinkedIn"
+                <a href="#" target="_blank" title="LinkedIn"
                   ><i class="fa fa-linkedin" aria-hidden="true"></i
                 ></a>
               </div>
@@ -301,13 +299,13 @@
     </main>
     <footer>
       <div class="social-links d-flex justify-content-center">
-        <a href="#" target="_blank" class="p-3" title="Instagram"
+        <a href="#" target="_blank" title="Instagram"
           ><i class="fa-brands fa-instagram" aria-hidden="true"></i
         ></a>
-        <a href="#" target="_blank" class="p-3" title="GitHub"
+        <a href="#" target="_blank" title="GitHub"
           ><i class="fa-brands fa-github" aria-hidden="true"></i
         ></a>
-        <a href="#" target="_blank" class="p-3" title="LinkedIn"
+        <a href="#" target="_blank" title="LinkedIn"
           ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
         ></a>
       </div>
