--- a/resume.html
+++ b/resume.html
@@ -30,13 +30,13 @@
           <div class="header__nav">
             <nav>
               <ul class="header__menu">
-                <li><a href="/" class="link">Home</a></li>
+                <li><a href="index.html" class="link">Home</a></li>
                 <li><a href="#" class="link carrent-link">Resume</a></li>
-                <li><a href="/#service" class="link">Services</a></li>
+                <li><a href="index.html#services" class="link">Services</a></li>
                 <li>
                   <a href="./index.html#portfolio" class="link">Portfolio</a>
                 </li>
-                <li><a href="/#contact" class="link">Contact</a></li>
+                <li><a href="./index.html#contact" class="link">Contact</a></li>
               </ul>
             </nav>
             <button class="header__burger menu-btn-open" type="button">
@@ -86,7 +86,7 @@
               class="col-12 col-md-6 pt-4 pt-sm-5 pt-lg-0 pe-md-5 pb-5 pb-md-0"
             >
               <img
-                src="./images/girl-programmer.png"
+                src="./images/girl-programmer.jpg"
                 alt="Photo of girl programmer in glasses with computer"
                 class="img-fluid img float-end"
               />
