--- a/about.html
+++ b/about.html
@@ -58,12 +58,14 @@
                     <li>
                       <a href="./" class="mobile__menu-link">Home</a>
                     </li>
-                    <li><a href="#" class="mobile__menu-link">Resume</a></li>
+                    <li>
+                      <a href="./about.html" class="mobile__menu-link">About</a>
+                    </li>
                     <li>
                       <a href="#services" class="mobile__menu-link">Services</a>
                     </li>
                     <li>
-                      <a href="#portfolio" class="mobile__menu-link"
+                      <a href="./work.html" class="mobile__menu-link"
                         >Portfolio</a
                       >
                     </li>
