--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <a href="index.html#service" class="link">Services</a>
                 </li>
                 <li>
-                  <a href="./work.html" class="link">Portfolio</a>
+                  <a href="./portfolio.html" class="link">Portfolio</a>
                 </li>
                 <li><a href="index.html#contact" class="link">Contact</a></li>
               </ul>
@@ -68,10 +68,10 @@
                       <a href="./about.html" class="mobile__menu-link">About</a>
                     </li>
                     <li>
-                      <a href="#services" class="mobile__menu-link">Services</a>
+                      <a href="#" class="mobile__menu-link">Services</a>
                     </li>
                     <li>
-                      <a href="./work.html" class="mobile__menu-link"
+                      <a href="./portfolio.html" class="mobile__menu-link"
                         >Portfolio</a
                       >
                     </li>
@@ -128,11 +128,11 @@
           </div>
         </div>
       </section>
-      <section class="service-section section" id="service">
+      <section class="service-section section">
         <h3 class="fs-4 text-uppercase">what i do</h3>
         <p class="text-center fs-2 fw-semibold">My services</p>
       </section>
-      <section class="portfolio-section section" id="portfolio">
+      <section class="portfolio-section section">
         <h3 class="fs-4 text-uppercase">portfolio</h3>
         <p class="text-center fs-2 fw-semibold">Checkout a few of my works</p>
         <p class="text-center pb-5">(more coming soon)</p>
@@ -266,7 +266,7 @@
           </div>
         </article>
       </section>
-      <section class="contact-section section" id="contact">
+      <section class="contact-section section">
         <div class="contact-container">
           <h2 class="mb-4">Contact Information</h2>
           <form action="#" name="form">
