--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Resume: Yevheniia Kovzikova - Front-end developer</title>
+    <title>Yevheniia Kovzikova - Work</title>
     <meta
       name="description"
       content="Hi! I'm a front-end developer with a strong interest in web technologies."
@@ -30,13 +30,21 @@
           <div class="header__nav">
             <nav>
               <ul class="header__menu">
-                <li><a href="index.html" class="link">Home</a></li>
-                <li><a href="#" class="link carrent-link">About</a></li>
-                <li><a href="index.html#services" class="link">Services</a></li>
                 <li>
-                  <a href="./index.html#portfolio" class="link">Portfolio</a>
+                  <a href="index.html" class="link">Home</a>
                 </li>
-                <li><a href="./index.html#contact" class="link">Contact</a></li>
+                <li>
+                  <a href="./about.html" class="link">About</a>
+                </li>
+                <li>
+                  <a href="index.html#service" class="link">Services</a>
+                </li>
+                <li>
+                  <a href="index.html#portfolio" class="link carrent-link"
+                    >Portfolio</a
+                  >
+                </li>
+                <li><a href="index.html#contact" class="link">Contact</a></li>
               </ul>
             </nav>
             <button class="header__burger menu-btn-open" type="button">
@@ -81,43 +89,70 @@
       </div>
     </header>
     <main>
-      <section class="about-section section">
-        <div class="container">
+      <section class="work-section section pt-5">
+        <h3 class="fs-4 text-uppercase">portfolio</h3>
+        <p class="text-center fs-2 fw-semibold">Checkout a few of my works</p>
+        <p class="text-center pb-5">(more coming soon)</p>
+        <div class="work-section__content container">
           <div class="row">
-            <div
-              class="col-12 col-md-6 pt-4 pt-sm-5 pt-lg-0 pe-md-5 pb-5 pb-md-0"
-            >
-              <img
-                src="./images/girl-programmer.jpg"
-                alt="Photo of girl programmer in glasses with computer"
-                class="img-fluid img float-end"
-              />
-            </div>
-            <div class="col-12 col-md-6 pt-xl-2 text-center text-md-start">
-              <h2 class="mb-5">Hi! I'm Yevheniia Kovzikova</h2>
-              <p class="about-section__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
-                repudiandae consequuntur incidunt quae, optio autem iste
-                repellendus voluptate, distinctio saepe maxime qui totam
-                officiis adipisci quas eaque nobis ratione cum.
-              </p>
-              <p><a href="#">Checkout my resume</a></p>
-              <h4 class="mt-5 mb-2">Contact me here!</h4>
-              <div
-                class="social-links d-flex justify-content-center justify-content-md-start mb-4"
-              >
-                <a href="#" target="_blank" title="Instagram"
-                  ><i class="fa fa-instagram" aria-hidden="true"></i
-                ></a>
-                <a href="#" target="_blank" title="GitHub"
-                  ><i class="fa fa-github" aria-hidden="true"></i
-                ></a>
-                <a href="#" target="_blank" title="LinkedIn"
-                  ><i class="fa fa-linkedin" aria-hidden="true"></i
-                ></a>
+            <div class="col-lg-6">
+              <div class="card m-3 p-5 bg-secondary">
+                <img
+                  src="./images/rv.jpg"
+                  class="card-img-top mb-5 shadow rounded"
+                  alt="..."
+                />
+                <div class="card-body text-center">
+                  <h4 class="card-title fw-semibold">
+                    <a href="https://rv-site.netlify.app/" class="text-light"
+                      >RV-s PROJECT</a
+                    >
+                  </h4>
+                  <p class="card-text text-center">
+                    Built with HTML, CSS, JavaScript and Swiper library
+                  </p>
+                </div>
               </div>
-              <p>E-mail: <a href="#">yevheniia_123@gmail.com</a></p>
-              <p>Phone: <a href="#">(012)345-67-89</a></p>
+            </div>
+            <div class="col-lg-6">
+              <div class="card m-3 p-5 bg-secondary">
+                <img
+                  src="./images/ttt-project.jpg"
+                  class="card-img-top mb-3 shadow rounded"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h4 class="card-title text-center fw-semibold">
+                    <a href="./tic-tac-toe.html" class="text-light"
+                      >TIC-TAC-TOE PROJECT</a
+                    >
+                  </h4>
+                  <p class="card-text text-center">
+                    Built with HTML, CSS, JavaScrip
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="card m-3 p-5 bg-secondary">
+                <img
+                  src="./images/weather_project.jpg"
+                  class="card-img-top mb-5 shadow rounded"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <h4 class="card-title text-center fw-semibold">
+                    <a
+                      href="https://citycast-app.netlify.app/"
+                      class="text-light"
+                      >WEATHER PROJECT</a
+                    >
+                  </h4>
+                  <p class="card-text text-center">
+                    Built with HTML, CSS, JavaScript
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
