Changed image tic-tac-toe

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="row">
               <div class="col d-none d-md-block">
                 <img
-                  src="./images/ttt-project.jpg"
+                  src="./images/game.png"
                   alt="Tic-tac-toe project"
                   class="img-fluid"
                 />
