--- a/portfolio.html
+++ b/portfolio.html
@@ -104,7 +104,10 @@
                 />
                 <div class="card-body text-center">
                   <h4 class="card-title fw-semibold">
-                    <a href="https://rv-site.netlify.app/" class="text-light"
+                    <a
+                      href="https://rv-site.netlify.app/"
+                      target="_blank"
+                      class="text-light"
                       >RV-s PROJECT</a
                     >
                   </h4>
@@ -117,13 +120,16 @@
             <div class="col-lg-6">
               <div class="card m-3 p-5 bg-secondary">
                 <img
-                  src="./images/ttt-project.jpg"
-                  class="card-img-top mb-3 shadow rounded"
+                  src="./images/game.png"
+                  class="card-img-top mb-5 shadow rounded"
                   alt="..."
                 />
                 <div class="card-body">
-                  <h4 class="card-title text-center fw-semibold">
-                    <a href="./tic-tac-toe.html" class="text-light"
+                  <h4 class="card-title text-center p-3 fw-semibold">
+                    <a
+                      href="./tic-tac-toe.html"
+                      target="_blank"
+                      class="text-light"
                       >TIC-TAC-TOE PROJECT</a
                     >
                   </h4>
