Changed images game

--- a/index.html
+++ b/index.html
@@ -174,7 +174,11 @@
                 >
               </div>
               <div class="col d-none d-md-block">
-                <img src="./images/rv.jpg" alt="" class="img-fluid" />
+                <img
+                  src="./images/rv.jpg"
+                  alt="RV PROJECT PHOTO"
+                  class="img-fluid"
+                />
               </div>
             </div>
           </div>
@@ -182,8 +186,8 @@
             <div class="row">
               <div class="col d-none d-md-block">
                 <img
-                  src="./images/game.png"
-                  alt="Tic-tac-toe project"
+                  src="./images/ttt-project.jpg"
+                  alt="TIC-TAC-TOE PROJECT PHOTO"
                   class="img-fluid"
                 />
               </div>
@@ -258,7 +262,7 @@
               <div class="col d-none d-md-block">
                 <img
                   src="./images/weather_project.jpg"
-                  alt=""
+                  alt="WEATHER PROJECT PHOTO"
                   class="img-fluid"
                 />
               </div>
