--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
                 <img
                   src="./images/rv.jpg"
                   class="card-img-top mb-5 shadow rounded"
-                  alt="..."
+                  alt="RV PROJECT PHOTO"
                 />
                 <div class="card-body text-center">
                   <h4 class="card-title fw-semibold">
@@ -120,9 +120,9 @@
             <div class="col-lg-6">
               <div class="card m-3 p-5 bg-secondary">
                 <img
-                  src="./images/game.png"
+                  src="./images/ttt-project.jpg"
                   class="card-img-top mb-5 shadow rounded"
-                  alt="..."
+                  alt="TIC-TAC-TOE PROJECT PHOTO"
                 />
                 <div class="card-body">
                   <h4 class="card-title text-center p-3 fw-semibold">
@@ -144,7 +144,7 @@
                 <img
                   src="./images/weather_project.jpg"
                   class="card-img-top mb-5 shadow rounded"
-                  alt="..."
+                  alt="WEATHER PROJECT PHOTO"
                 />
                 <div class="card-body">
                   <h4 class="card-title text-center fw-semibold">
